# dstt

./: .gitignore  README.md  dstt_library.py  dsttkernal.py  library.py  pyproject.toml  tool_provider.py
src/dstt_kernel/: __init__.py  tool_provider.py
src/dsttbooks/: __init__.py  api.py  errors.py  models.py
tests/: test_api.py  test_errors.py  test_kernal_multiple_segments.py  test_kernal_single_segment.py  test_kernal_with_dstt_library.py
